--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">atested</string>
-    <string name="action_settings">Acerca de</string>
-    <string name="action_nuevo">Nuevo</string>
-    <string name="action_buscar">Buscar</string>
+    <string name="action_listado">Listado de Preguntas</string>
+    <string name="action_configuracion">Configuracion</string>
+    <string name="action_acercade">Acerca de</string>
+    <string name="title_activity_listado">ListadoActivity</string>
 </resources>
