--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="listado_provisional">Listado Provisional</string>
     <string name="title_activity_listado">Listado</string>
     <string name="title_activity_anyadir">AnyadirActivity</string>
+    <string name="write_permission_denied">Permisos escritura denegados</string>
+    <string name="write_permission_granted">Permisos escritura garantizados</string>
+    <string name="write_permission_accepted">Permisos escritura aceptados</string>
+    <string name="write_permission_not_accepted">Permisos escritura no aceptados</string>
+
 </resources>
