Modificación del Row y la salida por pantalla

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -11,4 +11,5 @@
     <string name="write_permission_granted">Write permission garanted</string>
     <string name="write_permission_accepted">Write permission acepted</string>
     <string name="write_permission_not_accepted">Write permission not acepted</string>
+    <string name="intro">\n</string>
 </resources>
