--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
     <string name="AcercaDeTitulo">Aplicación desarrollada por Baltasar Jiménez Rincón</string>
     <string name="AnyadirEnunciado">Enunciado</string>
     <string name="AnyadirRespuestaCorrecta">Respuesta correcta</string>
-    <string name="AnyadirRespuestaIncorrecta1">Respuesta Incorrecta</string>
-    <string name="AnyadirRespuestaIncorrecta2">Respuesta Incorrecta</string>
-    <string name="AnyadirRespuestaIncorrecta3">Respuesta Incorrecta</string>
+    <string name="AnyadirRespuestaIncorrecta1">Respuesta Incorrecta 1</string>
+    <string name="AnyadirRespuestaIncorrecta2">Respuesta Incorrecta 2</string>
+    <string name="AnyadirRespuestaIncorrecta3">Respuesta Incorrecta 3</string>
     <string name="AnyadirGuardar">Guardar</string>
     <string name="AnyadirModCat">ModCat</string>
     <string name="noImplementado">No hay ninguna pregunta en el listado</string>
@@ -32,7 +32,7 @@
     <string name="calificaci_n_media">Calificación Media:</string>
     <string name="_0">0</string>
     <string name="AnyadirRespuestaIncorrecta">Respuesta Incorrecta</string>
-    <string name="twitter">Twitter: @BaltaJmn</string>
-    <string name="instagram">Instagram: @baltajmn75</string>
+    <string name="twitter" translatable="false">Twitter: @BaltaJmn</string>
+    <string name="instagram" translatable="false">Instagram: @baltajmn75</string>
 
 </resources>
